# src/main/java/com/gudgo/jeju/global/util/mail/controller/MailController.java
@@ -1,6 +1,9 @@
 package com.gudgo.jeju.global.util.mail.controller;
 
+import com.gudgo.jeju.global.auth.basic.dto.request.AuthenticationRequest;
 import com.gudgo.jeju.global.auth.basic.dto.request.EmailRequestDto;
+import com.gudgo.jeju.global.auth.basic.dto.response.FindAuthResponseDto;
+import com.gudgo.jeju.global.auth.basic.service.FindAuthService;
 import com.gudgo.jeju.global.util.mail.dto.request.MailAuthenticationMessage;
 import com.gudgo.jeju.global.util.mail.service.MailService;
 import jakarta.mail.MessagingException;
@@ -16,6 +19,7 @@ import org.springframework.web.bind.annotation.RestController;
 @RequestMapping("/api/v1/auth")
 public class MailController {
 
+    private final FindAuthService findAuthService;
     private final MailService mailService;
 
     @PostMapping("/authentication/send")
@@ -27,5 +31,20 @@ public class MailController {
 
         String authCode = mailService.sendMailAuthenticationCode(mailAuthenticationMessage);
         return ResponseEntity.ok(authCode);
+    }
+
+    /* 이메일 인증번호 확인*/
+    @PostMapping(value = "/authentication/check")
+    public ResponseEntity<?> checkAuthenticationCode(@RequestBody AuthenticationRequest request) {
+        findAuthService.validateAuthCode(request);
+        return ResponseEntity.ok().build();
+    }
+
+    @PostMapping(value = "/authentication/check/later")
+    public ResponseEntity<FindAuthResponseDto> checkAuthenticationCodeAfterSignup(@RequestBody AuthenticationRequest request) {
+        findAuthService.validateAuthCode(request);
+        FindAuthResponseDto response = findAuthService.validateAuthCodeAfterSignup(request);
+
+        return ResponseEntity.ok(response);
     }
 }
